# stm32_testbed

./: .gitignore  CMakeLists.txt  README.md
cmake/: stm32-gcc-flags.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/include/app/: init.h
src/app/src/: dummy_init.c
src/app/src/app_blink/: app-def.cmake  app-def.h  app_blink_init.c  blink_led.c  blink_led.h
src/app/src/app_racer/: app-def.cmake  racer_init.c
src/board/: CMakeLists.txt  jlink-flash-stm32.jlink  stm32-gcc-jlink.cmake  stm32-gcc-stlink.cmake  stm32f427vi-openocd.cfg
src/board/bbb_racer_cape/: MCUResource.md  target-def.cmake
src/board/bbb_racer_cape/cubemx/: .mxproject  Makefile  bbb_racer_cape.ioc
src/board/bbb_racer_cape/cubemx/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
src/board/bbb_racer_cape/cubemx/Core/Src/: can.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
src/board/bbb_racer_cape/periph_impl/: periph.c  periphdef.h
src/module/dprint/: CMakeLists.txt
src/module/dprint/include/dprint/: dprint.h  itm.h
src/module/dprint/src/: dprint.c  itm.c
src/module/mcal/: CMakeLists.txt  REAMDE.md
src/module/mcal/include/mcal/: can.h  dio.h  dma.h  i2c.h  mcal.h  mcu.h  periph.h  pwm.h  spi.h  stm32.h  uart.h  utils.h
src/module/mcal/src/: can.c  dio.c  dma.c  pwm.c  spi.c  uart.c  utils.c
src/module/periph/: CMakeLists.txt
src/module/periph/include/periph/: can.h  dio.h  led.h  periph.h  uart.h
src/module/periph/src/: can.c  dio.c  led.c  uart.c
src/module/ringbuf/: CMakeLists.txt  README.md  ringbuf.mk
src/module/ringbuf/include/ringbuf/: ringbuf.h
src/module/ringbuf/src/: ringbuf.c
src/testbed/: CMakeLists.txt
src/testbed/include/testbed/: testbed.h  testbed_init.h
src/testbed/src/: common.h  init_test.c  led_test.c  task_can.c  task_dio.c  task_uart.c  test_dio.c  test_items.h  test_led.c  testbed_task.c
